# CachyBoard

./: .clangd  .gitignore  CHANGELOG.md  CHANGELOG.spec  CMakeLists.txt  Config.h  README.md  VirtualKeyboard.cpp  VirtualKeyboard.h  build_all.sh  main.cpp  resources.qrc
assets/: cachyboard.desktop
packaging/: Containerfile.cachyos  Containerfile.fedora  Containerfile.ubuntu
packaging/arch/: PKGBUILD
